Access Token added
Signed-off-by: Sergey Chvalyuk <grubberr@gmail.com>

--- a/airbyte-integrations/connectors/source-xero/source_xero/spec.yaml
+++ b/airbyte-integrations/connectors/source-xero/source_xero/spec.yaml
@@ -36,6 +36,7 @@ connectionSpecification:
           airbyte_secret: true
         access_token:
           type: string
+          title: Access Token
           description: "Enter your Xero application's access token"
           airbyte_secret: true
         token_expiry_date:
