--- a/airbyte-integrations/connectors/source-kobotoolbox/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-kobotoolbox/sample_files/configured_catalog.json
@@ -4,16 +4,13 @@
             "stream": {
                 "name": "kobo_tool_stream",
                 "json_schema": {},
-                "supported_sync_modes": [
-                    "full_refresh"
-                ],
-                "source_defined_cursor": false,
-                "default_cursor_field": [
-                    "column_name"
-                ]
+                "supported_sync_modes": ["full_refresh", "incremental"],
+                "source_defined_cursor": true,
+                "default_cursor_field": ["_submission_time"]
             },
-            "sync_mode": "full_refresh",
-            "destination_sync_mode": "overwrite"
+            "sync_mode": "incremental",
+            "cursor_field": ["_submission_time"],
+            "destination_sync_mode": "append"
         }
     ]
 }
