--- a/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
+++ b/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
@@ -22,6 +22,7 @@ connectionSpecification:
         start_time:
             type: string
             title: Start Time
-            description: Start Time for Kobotoolbox
-            default: "2023-03-15"
+            description: Any data before this date will not be replicated.
+            default: "2023-03-15T00:00:00"
             order: 3
+            pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}$
