--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -5453,7 +5453,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-google-ads:0.2.11"
+- dockerImage: "airbyte/source-google-ads:0.2.12"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/google-ads"
     connectionSpecification:
@@ -5537,6 +5537,7 @@
           examples:
           - "2017-01-25"
           order: 2
+          format: "date"
         end_date:
           type: "string"
           title: "End Date"
@@ -5546,6 +5547,7 @@
           examples:
           - "2017-01-30"
           order: 6
+          format: "date"
         custom_queries:
           type: "array"
           title: "Custom GAQL Queries"
