--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -6091,7 +6091,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-google-search-console:0.1.20"
+- dockerImage: "airbyte/source-google-search-console:0.1.21"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/google-search-console"
     connectionSpecification:
@@ -6124,6 +6124,7 @@
           - "2021-01-01"
           pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
           order: 1
+          format: "date"
         end_date:
           type: "string"
           title: "End Date"
@@ -6133,6 +6134,7 @@
           - "2021-12-12"
           pattern: "^$|^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
           order: 2
+          format: "date"
         authorization:
           type: "object"
           title: "Authentication Type"
