--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -606,6 +606,13 @@
   icon: file.svg
   sourceType: file
   releaseStage: generally_available
+- name: Firebase Realtime Database
+  sourceDefinitionId: acb5f973-a565-441e-992f-4946f3e65662
+  dockerRepository: airbyte/source-firebase-realtime-database
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.io/integrations/sources/firebase-realtime-database
+  sourceType: database
+  releaseStage: alpha
   allowedHosts:
     hosts:
       - "*"
