--- a/airbyte-integrations/connectors/source-strava/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-strava/acceptance-test-config.yml
@@ -19,10 +19,7 @@ acceptance_tests:
     tests:
       - config_path: "secrets/config.json"
         expect_records:
-          path: "integration_tests/expected_records.txt"
-          extra_fields: no
-          exact_order: no
-          extra_records: yes
+          path: "integration_tests/expected_records.jsonl"
   incremental:
     tests:
       - config_path: "secrets/config.json"
