--- a/airbyte-integrations/bases/connector-acceptance-test/Dockerfile
+++ b/airbyte-integrations/bases/connector-acceptance-test/Dockerfile
@@ -36,4 +36,4 @@ RUN pip install .
 LABEL io.airbyte.version=0.7.0
 LABEL io.airbyte.name=airbyte/connector-acceptance-test
 
-ENTRYPOINT ["python", "-m", "pytest", "-p", "connector_acceptance_test.plugin", "-r", "fEsx"]
+ENTRYPOINT ["python", "-m", "pytest", "-p", "connector_acceptance_test.plugin", "-r", "fEsx", "-k", "test_read"]
