--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -16475,7 +16475,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-xero:0.2.0"
+- dockerImage: "airbyte/source-xero:0.2.1"
   spec:
     documentationUrl: "https://docs.airbyte.io/integrations/sources/xero"
     connectionSpecification:
@@ -16514,6 +16514,7 @@
               airbyte_secret: true
             access_token:
               type: "string"
+              title: "Access Token"
               description: "Enter your Xero application's access token"
               airbyte_secret: true
             token_expiry_date:
@@ -16528,6 +16529,7 @@
           order: 1
         start_date:
           type: "string"
+          title: "Start Date"
           pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}Z$"
           description: "UTC date and time in the format YYYY-MM-DDTHH:mm:ssZ. Any\
             \ data with created_at before this data will not be synced."
