--- a/airbyte-integrations/connectors/source-maestro-qa/source_maestro_qa/spec.yaml
+++ b/airbyte-integrations/connectors/source-maestro-qa/source_maestro_qa/spec.yaml
@@ -1,4 +1,4 @@
-documentationUrl: https://help.maestroqa.com/en/articles/3209794-maestroqa-api
+documentationUrl: https://docs.airbyte.com/integrations/sources/maestro-qa
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   title: Maestro QA Spec
