--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -11258,7 +11258,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-paystack:0.1.2"
+- dockerImage: "airbyte/source-paystack:0.1.3"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/paystack"
     connectionSpecification:
@@ -11286,6 +11286,7 @@
             \ data before this date will not be replicated."
           examples:
           - "2017-01-25T00:00:00Z"
+          format: "date-time"
         lookback_window_days:
           type: "integer"
           title: "Lookback Window (in days)"
