--- a/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
@@ -27,19 +27,25 @@ acceptance_tests:
         future_state:
           future_state_path: "integration_tests/abnormal_state.json"
         timeout_seconds: 3600
-        threshold_days: 30
+        threshold_days: 30 # Reduce this if you have many data to retrieve
   full_refresh:
     tests:
       - config_path: "secrets/config.json"
         configured_catalog_path: "integration_tests/configured_catalog.json"
         ignored_fields:
-          "adgroups_report_daily":
-            - "granularity"
-            - "metadata"
-          "campaigns_report_daily":
-            - "granularity"
-            - "metadata"
-          "keywords_report_daily":
-            - "granularity"
-            - "metadata"
+          adgroups_report_daily:
+            - name: granularity
+              bypass_reason: "Can't be idempotent by nature"
+            - name: metadata
+              bypass_reason: "Can't be idempotent by nature"
+          campaigns_report_daily: 
+            - name: granularity
+              bypass_reason: "Can't be idempotent by nature"
+            - name: metadata
+              bypass_reason: "Can't be idempotent by nature"
+          keywords_report_daily:
+            - name: granularity
+              bypass_reason: "Can't be idempotent by nature"
+            - name: metadata
+              bypass_reason: "Can't be idempotent by nature"
         timeout_seconds: 3600
