--- a/airbyte-integrations/connectors/source-postgres/build.gradle
+++ b/airbyte-integrations/connectors/source-postgres/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation libs.postgresql
+    implementation libs.bundles.datadog
 
     testImplementation testFixtures(project(':airbyte-integrations:bases:debezium'))
     testImplementation testFixtures(project(':airbyte-integrations:connectors:source-jdbc'))
