--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -11066,7 +11066,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-outreach:0.1.2"
+- dockerImage: "airbyte/source-outreach:0.2.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/outreach"
     connectionSpecification:
@@ -11079,7 +11079,7 @@
       - "refresh_token"
       - "redirect_uri"
       - "start_date"
-      additionalProperties: false
+      additionalProperties: true
       properties:
         client_id:
           type: "string"
