--- a/airbyte-integrations/connectors/source-lexoffice/source_lexware/spec.yaml
+++ b/airbyte-integrations/connectors/source-lexoffice/source_lexware/spec.yaml
@@ -3,6 +3,7 @@ connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   title: Lexware Spec
   type: object
+  additionalProperties: true
   required:
     - apikey
   properties:
