--- a/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
+++ b/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
@@ -3,6 +3,7 @@ connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   title: Kobotoolbox Spec
   type: object
+  additionalProperties: true
   required:
     - username
     - password
