NetSuite sync issue

--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -11199,6 +11199,8 @@
         - "consumer_secret"
         - "token_key"
         - "token_secret"
+        - "language"
+        - "object_types"
         - "start_datetime"
       additionalProperties: true
       properties:
