--- a/airbyte-integrations/connectors/source-netsuite/source_netsuite/spec.yaml
+++ b/airbyte-integrations/connectors/source-netsuite/source_netsuite/spec.yaml
@@ -10,6 +10,7 @@ connectionSpecification:
     - token_key
     - token_secret
     - language
+    - object_types
     - start_datetime
 
   additionalProperties: true
