--- a/airbyte-webapp/package.json
+++ b/airbyte-webapp/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@headlessui/react": "^1.6.5",
+    "@material/slider": "^14.0.0",
     "@monaco-editor/react": "^4.4.5",
     "@react-oauth/google": "^0.5.1",
     "@sentry/react": "^6.19.6",
