--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -22,7 +22,7 @@ on:
       dataset:
         description: "Name of dataset to use for performance measurement. Currently supports 1m, 10m, 20m."
         required: false
-        default: "1m""
+        default: "1m"
 jobs:
   uuid:
     name: "Custom UUID of workflow run"
