--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -14768,7 +14768,7 @@
               path_in_connector_config:
               - "credentials"
               - "client_secret"
-- dockerImage: "airbyte/source-strava:0.1.2"
+- dockerImage: "airbyte/source-strava:0.1.3"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/strava"
     connectionSpecification:
@@ -14781,7 +14781,7 @@
       - "refresh_token"
       - "athlete_id"
       - "start_date"
-      additionalProperties: false
+      additionalProperties: true
       properties:
         auth_type:
           type: "string"
@@ -14796,6 +14796,7 @@
           pattern: "^[0-9_\\-]+$"
           examples:
           - "12345"
+          order: 0
         client_secret:
           type: "string"
           description: "The Client Secret of your Strava developer application."
@@ -14804,6 +14805,7 @@
           examples:
           - "fc6243f283e51f6ca989aab298b17da125496f50"
           airbyte_secret: true
+          order: 1
         refresh_token:
           type: "string"
           description: "The Refresh Token with the activity: read_all permissions."
@@ -14812,6 +14814,7 @@
           examples:
           - "fc6243f283e51f6ca989aab298b17da125496f50"
           airbyte_secret: true
+          order: 2
         athlete_id:
           type: "integer"
           description: "The Athlete ID of your Strava developer application."
@@ -14819,12 +14822,14 @@
           pattern: "^[0-9_\\-]+$"
           examples:
           - "17831421"
+          order: 3
         start_date:
           type: "string"
           description: "UTC date and time. Any data before this date will not be replicated."
           title: "Start Date"
           examples:
           - "2016-12-31 23:59:59"
+          order: 4
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
@@ -14836,7 +14841,7 @@
       oauth_config_specification:
         complete_oauth_output_specification:
           type: "object"
-          additionalProperties: false
+          additionalProperties: true
           properties:
             refresh_token:
               type: "string"
@@ -14844,7 +14849,7 @@
               - "refresh_token"
         complete_oauth_server_input_specification:
           type: "object"
-          additionalProperties: false
+          additionalProperties: true
           properties:
             client_id:
               type: "string"
