--- a/airbyte-integrations/connectors/source-chargebee/source_chargebee/manifest.yaml
+++ b/airbyte-integrations/connectors/source-chargebee/source_chargebee/manifest.yaml
@@ -121,6 +121,25 @@ definitions:
             stream: "#/definitions/customer_stream"
             parent_key: id
             partition_field: id
+      requester:
+        $ref: "#/definitions/requester"
+        error_handler:
+          type: CompositeErrorHandler
+          error_handlers:
+            - type: DefaultErrorHandler
+              response_filters:
+                - http_codes: [404]
+                  action: IGNORE
+                  error_message: "Entity unavailable. Customer must have been deleted."
+            - type: DefaultErrorHandler
+              response_filters:
+                - error_message_contains: "This API operation is not enabled for this site"
+                  action: IGNORE
+                  error_message: "Stream is available only for Product Catalog 1.0"
+            - type: DefaultErrorHandler
+              backoff_strategies:
+                - type: WaitTimeFromHeader
+                  header: "Retry-After"
     $parameters:
       name: "contact"
       primary_key: "id"
