--- a/airbyte-integrations/connectors/source-bing-ads/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-bing-ads/acceptance-test-config.yml
@@ -19,24 +19,23 @@ acceptance_tests:
     tests:
     - config_path: secrets/config.json
       expect_records:
-        path: integration_tests/expected_records.txt
-        extra_records: true
+        path: "integration_tests/expected_records.txt"
+        extra_records: yes
       empty_streams:
       - name: account_performance_report_hourly
-        bypass_reason: Hourly reports are disabled, because sync is too long
+        bypass_reason: "Hourly reports are disabled, because sync is too long"
       - name: ad_group_performance_report_hourly
-        bypass_reason: Hourly reports are disabled, because sync is too long
+        bypass_reason: "Hourly reports are disabled, because sync is too long"
       - name: ad_performance_report_hourly
-        bypass_reason: Hourly reports are disabled, because sync is too long
+        bypass_reason: "Hourly reports are disabled, because sync is too long"
       - name: campaign_performance_report_hourly
-        bypass_reason: Hourly reports are disabled, because sync is too long
+        bypass_reason: "Hourly reports are disabled, because sync is too long"
       - name: keyword_performance_report_hourly
-        bypass_reason: Hourly reports are disabled, because sync is too long
+        bypass_reason: "Hourly reports are disabled, because sync is too long"
   full_refresh:
     tests:
     - config_path: secrets/config.json
       configured_catalog_path: integration_tests/configured_catalog.json
   incremental:
-    tests: null
-    bypass_reason: SAT doesn't support complex nested states used in incremental report
-      streams
+    tests:
+    bypass_reason: "SAT doesn't support complex nested states used in incremental report streams"
