--- a/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
+++ b/airbyte-ci/connectors/metadata_service/orchestrator/pyproject.toml
@@ -15,7 +15,7 @@ dagster-gcp = "^0.17.21"
 google = "^3.0.0"
 jinja2 = "^3.1.2"
 pygithub = "^1.58.0"
-metadata-service = {path = "../lib"}
+metadata-service = {path = "../lib", develop = true}
 
 
 [tool.poetry.group.dev.dependencies]
