--- a/airbyte-integrations/connectors/source-klaviyo/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-klaviyo/acceptance-test-config.yml
@@ -33,4 +33,4 @@ acceptance_tests:
     tests:
     - spec_path: source_klaviyo/spec.json
 connector_image: airbyte/source-klaviyo:dev
-test_strictness_level: low
+test_strictness_level: high
