--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -370,7 +370,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-alloydb:2.0.7"
+- dockerImage: "airbyte/source-alloydb:2.0.9"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/postgres"
     connectionSpecification:
@@ -388,6 +388,7 @@
           description: "Hostname of the database."
           type: "string"
           order: 0
+          group: "db"
         port:
           title: "Port"
           description: "Port of the database."
@@ -398,11 +399,13 @@
           examples:
           - "5432"
           order: 1
+          group: "db"
         database:
           title: "Database Name"
           description: "Name of the database."
           type: "string"
           order: 2
+          group: "db"
         schemas:
           title: "Schemas"
           description: "The list of schemas (case sensitive) to sync from. Defaults\
@@ -415,17 +418,21 @@
           default:
           - "public"
           order: 3
+          group: "db"
         username:
           title: "Username"
           description: "Username to access the database."
           type: "string"
           order: 4
+          group: "auth"
         password:
           title: "Password"
           description: "Password associated with the username."
           type: "string"
           airbyte_secret: true
           order: 5
+          group: "auth"
+          always_show: true
         jdbc_url_params:
           description: "Additional properties to pass to the JDBC URL string when\
             \ connecting to the database formatted as 'key=value' pairs separated\
@@ -435,6 +442,7 @@
           title: "JDBC URL Parameters (Advanced)"
           type: "string"
           order: 6
+          group: "advanced"
         ssl:
           title: "Connect using SSL"
           description: "Encrypt data using SSL. When activating SSL, please select\
@@ -442,12 +450,15 @@
           type: "boolean"
           default: false
           order: 7
+          group: "security"
+          always_show: true
         ssl_mode:
           title: "SSL Modes"
           description: "SSL connection modes. \n  Read more <a href=\"https://jdbc.postgresql.org/documentation/head/ssl-client.html\"\
             > in the docs</a>."
           type: "object"
-          order: 7
+          order: 8
+          group: "security"
           oneOf:
           - title: "disable"
             additionalProperties: true
@@ -576,7 +587,8 @@
           type: "object"
           title: "Replication Method"
           description: "Replication method for extracting data from the database."
-          order: 8
+          order: 9
+          group: "advanced"
           oneOf:
           - title: "Standard"
             description: "Standard replication requires no setup on the DB side but\
@@ -753,6 +765,14 @@
                 type: "string"
                 airbyte_secret: true
                 order: 4
+          group: "security"
+      groups:
+      - id: "db"
+      - id: "auth"
+      - id: "security"
+        title: "Security"
+      - id: "advanced"
+        title: "Advanced"
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
