try a larger machine for connectors nightly builds

--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -10,7 +10,7 @@ jobs:
   connectors_ci:
     name: Connectors CI
     timeout-minutes: 240 # 4 hours
-    runs-on: large-runner
+    runs-on: xlarge-runner
     steps:
       - name: Get start timestamp
         id: get-start-timestamp
