add strictness test level

--- a/airbyte-integrations/connectors/source-todoist/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-todoist/acceptance-test-config.yml
@@ -1,6 +1,7 @@
 # See [Source Acceptance Tests](https://docs.airbyte.com/connector-development/testing-connectors/source-acceptance-tests-reference)
 # for more information about how to configure these tests
 connector_image: airbyte/source-todoist:dev
+test_strictness_level: low
 acceptance_tests:
   spec:
     tests:
