--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -15673,6 +15673,24 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
+- dockerImage: "airbyte/source-todoist:0.1.0"
+  spec:
+    documentationUrl: "https://docs.airbyte.io/integrations/sources/todoist"
+    connectionSpecification:
+      $schema: "http://json-schema.org/draft-07/schema#"
+      title: "Todoist Spec"
+      type: "object"
+      required:
+      - "token"
+      properties:
+        token:
+          type: "string"
+          description: "Your API Token. See <a href=\"https://todoist.com/app/settings/integrations/\"\
+            >here</a>. The token is case sensitive."
+          airbyte_secret: true
+    supportsNormalization: false
+    supportsDBT: false
+    supported_destination_sync_modes: []
 - dockerImage: "airbyte/source-toggl:0.1.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/toggl"
