--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -5,12 +5,20 @@ on:
     # 11AM UTC is 12AM CET, 4AM PST.
     - cron: "0 11 * * *"
   workflow_dispatch:
+    inputs:
+      runs-on:
+        type: string
+        default: large-runner
+        required: true
+      test-connectors-options:
+        default: --concurrency=5 --release-stage=generally_available --release-stage=beta
+        required: true
 
 jobs:
   nightly_builds_alpha:
     name: Nightly builds GA + BETA
     timeout-minutes: 360 # 6 hours
-    runs-on: xlarge-runner
+    runs-on: ${{ inputs.runs-on || 'large-runner' }}
     steps:
       - name: Get start timestamp
         id: get-start-timestamp
@@ -41,7 +49,7 @@ jobs:
               mkdir -p "$DAGGER_TMP_BINDIR"
               curl "https://dl.dagger.io/dagger/main/${DAGGER_CLI_COMMIT}/dagger_${DAGGER_CLI_COMMIT}_$(uname -s | tr A-Z a-z)_$(uname -m | sed s/x86_64/amd64/).tar.gz" | tar xvz -C "$DAGGER_TMP_BINDIR"
           fi
-          connectors-ci --is-ci --gha-workflow-run-id=${{ github.run_id }} test-connectors --concurrency=15 --release-stage=generally_available --release-stage=beta
+          connectors-ci --is-ci --gha-workflow-run-id=${{ github.run_id }} test-connectors ${{ inputs.test-connectors-options || '--concurrency=5 --release-stage=generally_available --release-stage=beta' }}
         env:
           GCP_GSM_CREDENTIALS: ${{ secrets.GCP_GSM_CREDENTIALS }}
           AWS_ACCESS_KEY_ID: ${{ secrets.STATUS_API_AWS_ACCESS_KEY_ID }}
