--- a/.github/workflows/connector_nightly_builds_dagger.yml
+++ b/.github/workflows/connector_nightly_builds_dagger.yml
@@ -15,8 +15,8 @@ on:
         required: true
 
 jobs:
-  nightly_builds_alpha:
-    name: Nightly builds GA + BETA
+  test_connectors:
+    name: Test connectors ${{ test-connectors-options }}
     timeout-minutes: 360 # 6 hours
     runs-on: ${{ inputs.runs-on || 'large-runner' }}
     steps:
@@ -39,7 +39,7 @@ jobs:
           python-version: "3.10"
       - name: Install ci-connector-ops package
         run: pip install ./tools/ci_connector_ops\[pipelines]\
-      - name: Run nightly builds
+      - name: Test connectors
         run: |
           export _EXPERIMENTAL_DAGGER_RUNNER_HOST="unix:///var/run/buildkit/buildkitd.sock"
           DAGGER_CLI_COMMIT="67c7e7635cf4ea0e446e2fed522a3e314c960f6a"
